--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta property="og:image:secure_url" content="https://greentetembatu.github.io/Contoh-Undangan-Ucapan/foto/pasangan-jawa4.jpg">
     <meta property="og:image:width" content="976">
     <meta property="og:image:height" content="1200">
-    <meta property="og:image:alt" content="Foto Pasangan Wanita dan Pria dengan Pakaian Adat Jawa"> <meta property="og:image:type" content="image/jpeg"> 
+    <meta property="og:image:alt" content="Foto Pasangan Wanita dan Pria dengan Pakaian Adat Jawa"> 
+    <meta property="og:image:type" content="image/jpeg"> 
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
