--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/styleanimation.css">
     <link rel="stylesheet" href="css/stylerespon.css">
+            <link rel="stylesheet" href="css/barcode.css">
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
