--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Foto Pasangan Wanita dan Pria dengan Pakaian Adat Jawa"> 
-    <meta property="og:image:type" content="image/jpeg"> 
+    <meta property="og:image:type" content="image/jpg"> 
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
